# spaghetti_hunter

./: .gitignore  README.md  assignment.md  pyproject.toml
img/: spaghetti_monster_witcher.jfif
spaghetti_hunter/: __init__.py  cli.py  config.py  model_utils.py
